<resources>
    <string name="app_name">GraphKR</string>
    <string-array name="node_colors">
        <item>Rouge</item>
        <item>Vert</item>
        <item>Bleu</item>
        <item>Orange</item>
        <item>Cyan</item>
        <item>Magenta</item>
        <item>Noir</item>
    </string-array>
    <string name="node">Noeud</string>
    <string name="arc">Arc</string>
    <string name="arcName">Nom de l\'arc</string>
    <string name="graphName">Nom du graphe</string>
    <string name="modification">Modification</string>
    <string name="etiquette">Etiquette</string>
    <string name="size">Taille</string>
    <string name="width">Epaisseur</string>
    <string name="delete">Supprimer</string>
    <string name="reset"> Réinitialiser</string>
    <string name="save"> Sauvegarder</string>
    <string name="display"> Afficher</string>
    <string name="send"> Envoyer par mail</string>
</resources>
